src/main/java/com/example/medical/error/ConflictException.java

package com.example.medical.error;

public class ConflictException extends RuntimeException {
  public ConflictException(String message) {
    super(message);
  }
}
